# raster

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic_texture.frag  basic_texture.vert  text.frag  text.vert
examples/hello_world/: CMakeLists.txt  main.c
examples/hello_world/assets/shaders/: rasterbar.frag  rasterbar.vert
include/raster/: raster.h  raster_app.h  raster_gfx.h  raster_input.h  raster_log.h  raster_math.h  raster_sfx.h  raster_transform.h
libs/miniaudio/: miniaudio.h
libs/stb/: stb_image.h  stb_truetype.h
scripts/: build-native.sh  build-web.sh  clean.sh  format.sh  run-demo.sh  serve-web.sh  shell.html  watch-web.sh
src/raster/impl/: raster_app.c  raster_gfx.c  raster_gfx_common.c  raster_gfx_internal.h  raster_gfx_sprite.c  raster_gfx_text.c  raster_input.c  raster_log.c  raster_sfx.c  raster_transform.c
